# napari-bacseg

./: .gitignore  LICENSE  README.md  bacseg_ui.py  pyproject.toml  setup.cfg  tox.ini
src/GUI/: bacseg_ui.py  bacseg_ui.ui  widget_ui.py
src/bacseg/: _widget.py  napari.yaml
src/bacseg/GUI/: gui.py
src/bacseg/_tests/: test_bacseg.py  test_widget.py
src/bacseg/funcs/: colicoords_utils.py  databaseIO_utils.py  events_utils.py  picasso_utils.py  undrift_utils.py  utils.py  widget_ui.py
src/bacseg/funcs/IO/: export_utils.py  import_utils.py  olympus_utils.py
src/napari_bacseg/: __init__.py  _utils.py  _utils_cellpose.py  _utils_colicoords.py  _utils_database.py  _utils_database_IO.py  _utils_imagej.py  _utils_interface_events.py  _utils_json.py  _utils_oufti.py  _utils_picasso.py  _utils_refine.py  _utils_statistics.py  _utils_tiler.py  _utils_zeiss.py  _widget.py  bacseg_ui.py  bacseg_ui.ui  gapseq_ui.py  napari.yaml  napari_ui.py  widget_ui.py
src/napari_bacseg/GUI/: bacseg_ui.py  bacseg_ui.ui  gui.py  gui.ui
src/napari_bacseg/_tests/: test_bacseg.py  test_widget.py
src/napari_bacseg/bactfit/: __init__.py  cell.py  fileIO.py  fit.py  postprocess.py  preprocess.py  utils.py
src/napari_bacseg/funcs/: bactfit_utils.py  cell_events.py  cellpose_utils.py  colicoords_utils.py  databaseIO_utils.py  database_utils.py  events_utils.py  export_utils.py  heatmap_utils.py  import_utils.py  oufti_utils.py  picasso_utils.py  refine_utils.py  statistics_utils.py  threading_utils.py  tiler_utils.py  undrift_utils.py  utils.py  zeiss_utils.py
src/napari_bacseg/funcs/IO/: export_utils.py  imagej_utils.py  import_utils.py  json_utils.py  olympus_utils.py  oni_utils.py  oufti_utils.py  zeiss_utils.py
