[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/napari_bacseg/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[project]
name = "napari-bacseg"
version = "1.0.0"
authors = [
  { name="Piers Turner", email="piers.turner@physics.ox.ac.uk"},
]
description = "Bacterial segmentation and analysis platform than can inport/export files in multiple formats. Integrating many tools such as Cellpose, ColiCoords, Oufti/MicrobeTracker."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
"Environment :: Plugins",
"License :: OSI Approved :: BSD License",
"Programming Language :: Python :: 3.9",
"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/piedrro/napari-bacseg"
"Bug Tracker" = "https://github.com/piedrro/napari-bacseg/issues"
