[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/napari_bacseg/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[project]
name = "napari-bacseg"
version = "1.0.16"
authors = [{ name="Piers Turner", email="piers.turner@physics.ox.ac.uk"},]
description = "Bacterial segmentation and analysis platform than can inport/export files in multiple formats. Integrating many tools such as Cellpose, ColiCoords, Oufti/MicrobeTracker."
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
"Framework :: napari",
"Environment :: Plugins",
"License :: OSI Approved :: BSD License",
"Programming Language :: Python :: 3.9",
"Operating System :: OS Independent",
]

dependencies = [
    "napari >= 0.4.17",
    "opencv-python",
    "picassosr == 0.6.5",
    "numpy",
    "pyqt5",
    "pyqt6",
    "qtpy",
    "cellpose[all] >= 2.1.1",
    "scipy",
    "torch",
    "natsort",
    "tqdm",
    "imagecodecs",
    "tifffile",
    "pandas",
    "mat4py",
    "glob2",
    "matplotlib",
    "scikit-image",
    "roifile",
    "openpyxl",
    "shapely",
    "colicoords",
    "psutil",
    "xmltodict",
    "astropy",
    "tiler",
    "imageio-ffmpeg",
    "aicspylibczi",
    "czifile",
    "omnipose",
    "h5py",
]

[project.urls]
"Homepage" = "https://github.com/piedrro/napari-bacseg"
"Bug Tracker" = "https://github.com/piedrro/napari-bacseg/issues"

[project.optional-dependencies]
testing = [
    "tox",
    "pytest", # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov", # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt", # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
"napari-bacseg" = "napari_bacseg:napari.yaml"
