[project]
name = "napari-bacseg"
dynamic = ["version"]
authors = [{ name="Piers Turner", email="piers.turner@physics.ox.ac.uk"},]
description = "Bacterial segmentation and analysis platform than can inport/export files in multiple formats. Integrating many tools such as Cellpose, ColiCoords, Oufti/MicrobeTracker."
readme = "README.md"

classifiers = [
"Framework :: napari",
"Environment :: Plugins",
"License :: OSI Approved :: BSD License",
"Programming Language :: Python :: 3.9",
"Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "napari[all]==0.5.0",
    "torch",
    "cellpose >= 3.0.1",
    "opencv-python",
    "picassosr == 0.6.5",
    "numpy",
    "pyqt5",
    "pyqt6",
    "qtpy",
    "scipy",
    "natsort",
    "tqdm",
    "imagecodecs",
    "tifffile",
    "pandas",
    "mat4py",
    "glob2",
    "matplotlib",
    "scikit-image",
    "roifile",
    "openpyxl",
    "shapely",
    "colicoords",
    "psutil",
    "xmltodict",
    "astropy",
    "tiler",
    "imageio-ffmpeg",
    "aicspylibczi",
    "czifile",
    "omnipose",
    "h5py",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest", # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov", # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt", # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "napari_bacseg.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml","*.dll"]

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 79

[project.urls]
"Homepage" = "https://github.com/piedrro/napari-bacseg"
"Bug Tracker" = "https://github.com/piedrro/napari-bacseg/issues"


[project.entry-points."napari.manifest"]
"napari-bacseg" = "napari_bacseg:napari.yaml"
