;[metadata]
;name = napari-bacseg
;
;description = Bacterial segmentation and analysis platform than can inport/export files in multiple formats. Integrating many tools such as Cellpose, ColiCoords, Oufti/MicrobeTracker.
;long_description = file: README.md
;long_description_content_type = text/markdown
;url = https://github.com/piedrro/napari-bacseg
;author = Piers Turner
;author_email = piers.turner@physics.ox.ac.uk
;license = BSD-3-Clause
;license_files = LICENSE
;classifiers =
;    Framework :: napari
;    Intended Audience :: Developers
;    License :: OSI Approved :: BSD License
;    Operating System :: OS Independent
;    Programming Language :: Python
;    Programming Language :: Python :: 3.9
;    Programming Language :: Python :: 3.10
;    Topic :: Scientific/Engineering :: Image Processing
;project_urls =
;    Bug Tracker = https://github.com/piedrro/napari-bacseg/issues
;    Documentation = https://github.com/piedrro/napari-bacseg#README.md
;    Source Code = https://github.com/piedrro/napari-bacseg
;    User Support = https://github.com/piedrro/napari-bacseg/issues
;
;[options]
;packages = find:
;;install_requires =
;;    napari >= 0.4.17
;;    opencv-python
;;    picassosr==0.6.5
;;    numpy
;;    pyqt5
;;    pyqt6
;;    qtpy
;;    cellpose[all] >= 2.1.1
;;    scipy
;;    torch
;;    natsort
;;    tqdm
;;    imagecodecs
;;    tifffile
;;    pandas
;;    mat4py
;;    glob2
;;    matplotlib
;;    scikit-image
;;    roifile
;;    openpyxl
;;    shapely
;;    colicoords
;;    scikit-image
;;    shapely
;;    psutil
;;    xmltodict
;;    astropy
;;    tiler
;;    imageio-ffmpeg
;;    matplotlib
;;    aicspylibczi
;;    czifile
;;    omnipose
;;    h5py
;
;python_requires = >=3.9
;include_package_data = True
;package_dir =
;    =src
;setup_requires = setuptools_scm
;# add your package requirements here
;
;[options.packages.find]
;where = src
;
;;[options.entry_points]
;;napari.manifest =
;;    napari-bacseg = napari_bacseg:napari.yaml
;
;;[options.extras_require]
;;testing =
;;    tox
;;    pytest  # https://docs.pytest.org/en/latest/contents.html
;;    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
;;    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
;;    napari
;;    pyqt5
;
;
;[options.package_data]
;* = *.yaml
